Fix flex basis for non IE browsers [#167720153](https://www.pivotaltracker.com/story/show/167720153)

--- a/src/css/flex-grids/flex-grids.scss
+++ b/src/css/flex-grids/flex-grids.scss
@@ -55,7 +55,8 @@ $flexDirectionProps: row row-reverse column column-reverse;
   -webkit-box-flex: 1;
   flex-grow: 1;
   flex-shrink: 0;
-  flex-basis: auto;
+  flex-basis: 0;
+  -ms-flex-preferred-size: auto;
   max-width: 100%;
   padding: 0 $base-unit 0 $base-unit;
 }
